# global-capslock

./: .gitignore  README.md  client.py  example-server.py  flake.nix  foo.py  listen.py  mac-client.py  pyproject.toml  requirements.txt  windows-test.py
